WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121285
[CTTE] RenderListItem is never anonymous.
https://bugs.webkit.org/show_bug.cgi?id=121285
Summary
[CTTE] RenderListItem is never anonymous.
Andreas Kling
Reported
2013-09-13 03:16:11 PDT
[CTTE] RenderListItem is never anonymous.
Attachments
Patch
(5.60 KB, patch)
2013-09-13 03:25 PDT
,
Andreas Kling
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-13 03:25:58 PDT
Created
attachment 211528
[details]
Patch
Antti Koivisto
Comment 2
2013-09-13 03:56:38 PDT
Comment on
attachment 211528
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=211528&action=review
> Source/WebCore/rendering/RenderListItem.cpp:104 > - Element* listItemNode = listItem->element(); > + Element& listItemNode = listItem->existingElement();
Could name local to *Element since you are here.
Andreas Kling
Comment 3
2013-09-13 04:14:16 PDT
Committed
r155684
: <
http://trac.webkit.org/changeset/155684
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug