[CTTE] RenderListItem is never anonymous. <https://webkit.org/b/121285>

Reviewed by Antti Koivisto.

Hide element() and provide existingElement() instead, returning an Element&.
Removed some bogus assertions that were exposed by this.

Canonical link: https://commits.webkit.org/139241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155684 268f45cc-cd09-0410-ab3c-d52691b4dbfc